trunk/Archive/888305887c8b4e6285c0bd6cee1ca60a-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:19:17: error: passing 'const Car' as 'this' argument of 'void Car::Drive()' discards qualifiers [-fpermissive]
       car.Drive();
                 ^
